--- a/app.json
+++ b/app.json
@@ -15,7 +15,9 @@
     "ios": {
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "This app requires access to your location to track movement.",
-        "NSLocationAlwaysUsageDescription": "This app requires access to your location even when running in the background."
+        "NSLocationAlwaysUsageDescription": "This app requires access to your location even when running in the background.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "We use your location in the background to track deliveries.",
+        "UIBackgroundModes": ["location", "fetch"]
       },
       "supportsTablet": true,
       "bundleIdentifier": "com.yourcompany.stickersmash",
@@ -24,7 +26,8 @@
     "android": {
       "permissions": [
         "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION"
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_BACKGROUND_LOCATION"
       ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
